--- a/pages/form.html
+++ b/pages/form.html
@@ -14,96 +14,55 @@
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-            <section class="parentContainer">
+    <div class="circlebg"></div>
 
-    <div class="container block">
-      <form id="requestForm">
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" id="name" name="name" required />
-        </div>
+    <section class="parentContainer">
+      <div class="container block">
+        <form id="requestForm">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required />
+          </div>
 
-        <div class="form-group">
-          <label for="company">Company</label>
-          <input type="text" id="company" name="company" required />
-        </div>
+          <div class="form-group">
+            <label for="company">Company</label>
+            <input type="text" id="company" name="company" required />
+          </div>
 
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" required />
-        </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required />
+          </div>
 
-        <div class="form-group">
-          <label for="time">Preferred Time</label>
-          <select id="time" name="time" required>
+          <div class="form-group">
+            <label for="time">Preferred Time</label>
+            <input type="text" id="time" name="time" required />
+            <!-- <select id="time" name="time" required>
             <option value="">Select a time</option>
             <option value="morning">Morning (9:00 - 12:00)</option>
             <option value="afternoon">Afternoon (13:00 - 17:00)</option>
             <option value="evening">Evening (17:00 - 20:00)</option>
-          </select>
-        </div>
+          </select> -->
+          </div>
 
-        <button type="submit" class="cta-button">
-          Send Confidential Request
-        </button>
-      </form>
-    </div>
-</section>
+          <button type="submit" class="cta-button">
+            Send Confidential Request
+          </button>
+        </form>
+      </div>
+    </section>
 
     <footer class="footer">
       <p>&copy; 2026 Mayser Pharma AG — All rights reserved.</p>
     </footer>
 
-    <!-- Success Modal (Hidden by default) -->
     <div id="successModal" class="modal">
       <div class="modal-content">
-        <div
-          style="
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 3rem 2rem;
-            text-align: center;
-          "
-        >
-          <div
-            style="
-              width: 130px;
-              height: 130px;
-              border: 8px solid #ffffff;
-              border-radius: 50%;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              margin-bottom: 2rem;
-              padding: 18px;
-            "
-          >
-            <img src="../assets/tick.png" alt="tick" style="width: 100%" />
-          </div>
-          <h2
-            style="
-              font-size: clamp(24px, 3vw, 32px);
-              font-weight: 500;
-              letter-spacing: 0.4rem;
-              margin-bottom: 1rem;
-              color: #ffffff;
-            "
-          >
-            Request Confirmed
-          </h2>
-          <p
-            style="
-              font-size: clamp(14px, 1.5vw, 16px);
-              color: #a7b2c6;
-              letter-spacing: 0.3rem;
-              line-height: 1.8;
-            "
-          >
-            Your request has been received — thank you for your trust
-          </p>
+        <div>
+          <img src="../assets/tick.svg" alt="tick" />
         </div>
+        <h2>Request Confirmed</h2>
+        <p>Your request has been received — thank you for your trust</p>
       </div>
     </div>
 
