--- a/pages/granted.html
+++ b/pages/granted.html
@@ -13,9 +13,10 @@
     />
     <link rel="stylesheet" href="../style.css" />
   </head>
-  <body>
+  <body>    <div class="circlebg"></div>
+
     <section class="parentContainer">
-      <div class="container granted-container">
+      <div class="container ">
         <h1 class="fade-in">Access Granted</h1>
         <p class="subtitle fade-in-delayed">
           Redirecting to your confidential section
@@ -27,10 +28,10 @@
       <p>&copy; 2026 Mayser Pharma AG — All rights reserved.</p>
     </footer>
 
-    <script>
+     <script>
       window.addEventListener("load", () => {
         setTimeout(() => {
-          const heroSection = document.querySelector(".granted-container");
+          const heroSection = document.querySelector(".container");
 
           heroSection.style.transition = "opacity 0.5s ease";
           heroSection.style.opacity = "0";
@@ -39,7 +40,7 @@
             heroSection.style.display = "none";
 
             const secondScreen = document.createElement("div");
-            secondScreen.classList.add("container", "granted-container");
+            secondScreen.classList.add("container");
 
             secondScreen.style.opacity = "0";
 
@@ -65,6 +66,8 @@
           }, 500);
         }, 4000);
       });
-    </script>
+    </script> 
+
+
   </body>
 </html>
