--- a/pages/lusculpture.html
+++ b/pages/lusculpture.html
@@ -17,9 +17,10 @@
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-     <section class="parentContainer">
+    <div class="circlebg"></div>
 
-      <div class="block content-block">
+    <section class="parentContainer">
+      <div class="block">
         <h1>LuSculpture™</h1>
         <h2 class="subtitle">The Light-Activated Perfect Second-Skin</h2>
         <p class="description">
@@ -27,32 +28,29 @@
           Switzerland.
         </p>
       </div>
-</section>
-        <section class="parentContainer">
+    </section>
+    <section class="parentContainer">
+      <div class="block content-block">
+        <h1>A perfect second skin — activated by light</h1>
+        <p>
+          Based on a light-responsive polymer matrix, LuSculpture™ forms a thin,
+          invisible, elastic layer within seconds.
+        </p>
+        <p class="dev">Developed in Switzerland with medical precision.</p>
+      </div>
+    </section>
 
-         <div class="block content-block">
-          <h2>A perfect second skin — activated by light</h2>
-          <p>
-            Based on a light-responsive polymer matrix, LuSculpture™ forms a
-            thin, invisible, elastic layer within seconds.
-          </p>
-          <p class="dev">Developed in Switzerland with medical precision.</p>
-        </div>
-</section>
+    <section class="parentContainer LuSculpture">
+      <div class="block content-block space-between">
+        <h2 class="research-note">
+          Research visual under development — proprietary material image.
+        </h2>
+      </div>
+      <button class="cta-button" onclick="navigate()">
+        Request a Private Presentation
+      </button>
+    </section>
 
-        <section class="parentContainer">
-
-        <div class="block content-block space-between">
-          <h2 class="research-note">
-            Research visual under development — proprietary material image.
-          </h2>
-
-        </div>
-        <button class="cta-button" onclick="navigate()">
-          Request a Private Presentation
-        </button>
-       </section>
- 
     <footer class="footer">
       <p>© 2026 Mayser Pharma AG — All rights reserved.</p>
     </footer>
