--- a/index.html
+++ b/index.html
@@ -1,74 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Mayser Pharma AG - Private R&D Programme"
+    />
+    <title>Mayser Pharma AG</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="/assets/favicon-32.png"
+      sizes="32x32"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Mayser Pharma AG - Private R&D Programme" />
-  <meta property="og:image" content="/assets/og-image.png" />
-  <title>Mayser Pharma AG</title>
-  <link rel="icon" type="image/png" href="/assets/favicon-32.png" sizes="32x32" />
-  <link rel="stylesheet" href="style.css" />
-</head>
-
-<body>
-  <div class="circlebg"></div>
-  <section class="parentContainer">
-    <div class="container">
-      <div>
-        <h1 class="fade-in">Mayser Pharma AG</h1>
-        <h2 class="subtitle fade-in-delayed">
-          Private R&D Programme — by invitation only
-        </h2>
+  <body>
+    <div class="circlebg"></div>
+    <section class="parentContainer">
+      <div class="container" id="firstScreen">
+        <div>
+          <h1 class="transform-seq-h1">Mayser Pharma AG</h1>
+          <h2 class="subtitle transform-seq-h2">
+            Private R&D Programme — by invitation only
+          </h2>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <footer class="footer">
-    <p>© 2026 Mayser Pharma AG — All rights reserved.</p>
-  </footer>
+    <footer class="footer">
+      <p>© 2026 Mayser Pharma AG — All rights reserved.</p>
+    </footer>
 
-  <script src="app.js"></script>
-  <script>
-    window.addEventListener("load", () => {
-      setTimeout(() => {
-        const heroSection = document.querySelector(".container");
-        heroSection.style.opacity = "0";
-        heroSection.style.transition = "opacity 0.5s ease";
+    <script>
+      function crossfadeNavigate(url) {
+        const body = document.body;
+        body.classList.add("fade-out");
 
         setTimeout(() => {
-          heroSection.style.display = "none";
+          window.location.href = url;
+        }, 120);
+      }
 
-          const secondScreen = document.createElement("div");
-          secondScreen.className = "container second-screen";
-          secondScreen.innerHTML = `
-        <div>
-          <h1 class="fade-in">Confidential Access</h1>
-          <h2 class="subtitle fade-in-delayed">
-            Continue to confidential access
-          </h2>
-          <div class="arrow-button" id="continueBtn">
-           <img src="./assets/arrow.png" alt="arrow icon" />
-          </div>
-        </div>
-      `;
-          let parentContainer =
-            document.getElementsByClassName("parentContainer")[0];
-          parentContainer.appendChild(secondScreen);
+      window.addEventListener("load", () => {
+        setTimeout(() => {
+          const firstScreen = document.getElementById("firstScreen");
+          firstScreen.classList.add("fade-out");
 
           setTimeout(() => {
-            secondScreen.style.opacity = "1";
-          }, 50);
+            firstScreen.style.display = "none";
 
-          document
-            .getElementById("continueBtn")
-            .addEventListener("click", () => {
-              window.location.href = "./pages/access.html";
-            });
-        }, 500);
-      }, 4000);
-    });
-  </script>
-</body>
+            const secondScreen = document.createElement("div");
+            secondScreen.className = "container";
+            secondScreen.innerHTML = `
+            <div>
+              <h1 class="transform-seq-h1">Confidential Access</h1>
+              <h2 class="subtitle transform-seq-h2">
+                Continue to confidential access
+              </h2>
+              <div class="arrow-button transform-seq-cta" id="continueBtn">
+                <img src="./assets/arrow.png" alt="arrow icon" />
+              </div>
+            </div>
+          `;
 
+            document
+              .querySelector(".parentContainer")
+              .appendChild(secondScreen);
+
+            document
+              .getElementById("continueBtn")
+              .addEventListener("click", () => {
+                crossfadeNavigate("./pages/access.html");
+              });
+          }, 140);
+        }, 4000);
+      });
+    </script>
+  </body>
 </html>
