--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
     <div class="circlebg"></div>
     <section class="parentContainer">
       <div class="container" id="firstScreen">
-        <div>
-          <h1 class="transform-seq-h1">Mayser Pharma AG</h1>
-          <h2 class="subtitle transform-seq-h2">
+           <h1 class="transform-seq-h1">Mayser Pharma AG</h1>
+          <h2 class="  transform-seq-h2">
             Private R&D Programme — by invitation only
           </h2>
-        </div>
-      </div>
+       </div>
     </section>
 
     <footer class="footer">
@@ -55,15 +53,13 @@
             const secondScreen = document.createElement("div");
             secondScreen.className = "container";
             secondScreen.innerHTML = `
-            <div>
-              <h1 class="transform-seq-h1">Confidential Access</h1>
-              <h2 class="subtitle transform-seq-h2">
+               <h1 class="transform-seq-h1">Confidential Access</h1>
+              <h2 class="  transform-seq-h2">
                 Continue to confidential access
               </h2>
               <div class="arrow-button transform-seq-cta" id="continueBtn">
                 <img src="./assets/arrow.png" alt="arrow icon" />
-              </div>
-            </div>
+             </div>
           `;
 
             document
