--- a/pages/access.html
+++ b/pages/access.html
@@ -19,7 +19,7 @@
     <section class="parentContainer ">
       <div class="container">
         <h1 class="fade-in">Confidential Access</h1>
-        <h2 class="subtitle fade-in-delayed">
+        <h2 class="  fade-in-delayed">
           Enter your 6-digit access key to continue
         </h2>
 
