--- a/pages/access.html
+++ b/pages/access.html
@@ -47,9 +47,9 @@
 
     <script>
       const accessCodes = {
-        123456: "granted.html",
         LU1234: "granted.html",
         MS9876: "granted.html",
+        AG0001: "granted.html",
       };
 
       const digitInputs = document.querySelectorAll(".code-digit");
