--- a/pages/granted.html
+++ b/pages/granted.html
@@ -50,7 +50,7 @@
               .appendChild(secondScreen);
 
             setTimeout(() => {
-              <!-- window.location.href = "lusculpture.html"; -->
+              window.location.href = "lusculpture.html";
             }, 2000);
           }, 140);
         }, 4000);
